# vectus

./: .gitignore  LICENSE  meson.build
include/vectus/: client.h  vectus.h
src/: client.c  upload.c  uploader.c
tests/: client.c  suite.c
